--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,4 +6,11 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+	<form>
+		<label for="email">Email: </label>
+		<input type="email" required /> <br />
+		<input type="submit" value="Submit">
+	</form>
+
 </div>
