--- a/Pages/Order/Pizza.cshtml
+++ b/Pages/Order/Pizza.cshtml
@@ -2,4 +2,41 @@
 @model MadisonPizzeria.Pages.Order.IndexModel
 @{
 }
-<h1>@Model.PageTitle</h1>
+<h2>Pizza Size</h2>
+<p><input id="Small" type="checkbox" />  Small</p>
+<p><input id="Medium" type="checkbox" />  Medium</p>
+<p><input id="Large" type="checkbox" />  Large</p>
+
+<h2>Crust Size</h2>
+<p><input id="Thin" type="checkbox" />  Thin</p>
+<p><input id="Thick" type="checkbox" />  Thick</p>
+
+<h2>Sauce</h2>
+<p><input id="Barbeque" type="checkbox" />  Barbeque</p>
+<p><input id="Redsauce" type="checkbox" />  Marinara Sauce</p>
+<p><input id="Whitesauce" type="checkbox" />  Alfredo Sauce</p>
+<p><input id="Ranch" type="checkbox" />  Ranch</p>
+
+<h2>Cheese</h2>
+<p><input id="Mozzerela" type="checkbox" />  Mozzerela</p>
+<p><input id="Cheddar" type="checkbox" />  Cheddar</p>
+
+<h2>Meats</h2>
+<p><input id="Pepperoni" type="checkbox" />  Pepperoni</p>
+<p><input id="Sausage" type="checkbox" />  Sausage</p>
+<p><input id="CanadianBacon" type="checkbox" />  Canadian Bacon</p>
+<p><input id="Bacon" type="checkbox" />  Bacon</p>
+<p><input id="Chicken" type="checkbox" />  Chicken</p>
+<p><input id="Pork" type="checkbox" />  Pork</p>
+<p><input id="Ham" type="checkbox" />  Ham</p>
+
+<h2>Others</h2>
+<p><input id="Pineapple" type="checkbox" />  Pineapple</p>
+<p><input id="Spinach" type="checkbox" />  Spinach</p>
+<p><input id="Onions" type="checkbox" />  Onions</p>
+<p><input id="Peppers" type="checkbox" />  Green Peppers</p>
+<p><input id="BlackOlives" type="checkbox" />  Black Olives</p>
+<p><input id="Jalopenos" type="checkbox" />  Jalopenos</p>
+
+<input id="AddtoCart" type="button" value="Add to Cart" />
+
