I got all the pictures in and working. Pictures need to be formatted and resized still.

--- a/Pages/Order/Pizza.cshtml
+++ b/Pages/Order/Pizza.cshtml
@@ -6,20 +6,24 @@
 <p><input id="Small" type="checkbox" />  Small</p>
 <p><input id="Medium" type="checkbox" />  Medium</p>
 <p><input id="Large" type="checkbox" />  Large</p>
+<img src="https://thumbs.dreamstime.com/b/pizza-sizes-progression-vector-infographic-illustration-isometric-view-small-medium-large-pizza-sizes-progression-vector-211962863.jpg" alt="pizza size" width="200" height="200"/>
 
 <h2>Crust Size</h2>
 <p><input id="Thin" type="checkbox" />  Thin</p>
 <p><input id="Thick" type="checkbox" />  Thick</p>
+<img src="https://natashaskitchen.com/wp-content/uploads/2020/04/Pizza-Dough-Best-Pizza-Crust-Recipe-9-728x546.jpg" alt="Crust Thickness" width="200" height="200" />
 
 <h2>Sauce</h2>
 <p><input id="Barbeque" type="checkbox" />  Barbeque</p>
 <p><input id="Redsauce" type="checkbox" />  Marinara Sauce</p>
 <p><input id="Whitesauce" type="checkbox" />  Alfredo Sauce</p>
 <p><input id="Ranch" type="checkbox" />  Ranch</p>
+<img src="http://portlandiapielady.com/wp-content/uploads/2020/05/REd-White-1-scaled.jpg" width="200" height="200" />
 
 <h2>Cheese</h2>
-<p><input id="Mozzerela" type="checkbox" />  Mozzerela</p>
+<p><input id="Mozzerella" type="checkbox" />  Mozzerela</p>
 <p><input id="Cheddar" type="checkbox" />  Cheddar</p>
+<img src="https://www.darkcheese.com/wp-content/uploads/2022/04/Brown-and-Green-Simple-Comparing-Product-Instagram-Post-e1649377769603.jpg" width="200" height="200" />
 
 <h2>Meats</h2>
 <p><input id="Pepperoni" type="checkbox" />  Pepperoni</p>
@@ -29,6 +33,7 @@
 <p><input id="Chicken" type="checkbox" />  Chicken</p>
 <p><input id="Pork" type="checkbox" />  Pork</p>
 <p><input id="Ham" type="checkbox" />  Ham</p>
+<img src="https://www.tysonfoodservice.com/sites/default/files/2019-03/Pizza_Toppings_Landing_Page_Header_Image_1200x320.jpg" width="200" height="200" />
 
 <h2>Others</h2>
 <p><input id="Pineapple" type="checkbox" />  Pineapple</p>
@@ -37,6 +42,9 @@
 <p><input id="Peppers" type="checkbox" />  Green Peppers</p>
 <p><input id="BlackOlives" type="checkbox" />  Black Olives</p>
 <p><input id="Jalopenos" type="checkbox" />  Jalopenos</p>
-
+<p><input id="Mushrooms" type="checkbox" />  Mushrooms</p>
+<img src="https://iowagirleats.com/wp-content/uploads/2017/05/Freschetta-Gluten-Free-Pizza-iowagirleats-05.jpg" width="200" height="200" />
+<br />
+<br />
 <input id="AddtoCart" type="button" value="Add to Cart" />
 
