--- a/Pages/Order/Pizza.cshtml
+++ b/Pages/Order/Pizza.cshtml
@@ -35,7 +35,7 @@
 <p><input id="Ham" type="checkbox" />  Ham</p>
 <img src="https://www.tysonfoodservice.com/sites/default/files/2019-03/Pizza_Toppings_Landing_Page_Header_Image_1200x320.jpg" width="200" height="200" />
 
-<h2>Others</h2>
+<h2>Toppings</h2>
 <p><input id="Pineapple" type="checkbox" />  Pineapple</p>
 <p><input id="Spinach" type="checkbox" />  Spinach</p>
 <p><input id="Onions" type="checkbox" />  Onions</p>
@@ -46,5 +46,5 @@
 <img src="https://iowagirleats.com/wp-content/uploads/2017/05/Freschetta-Gluten-Free-Pizza-iowagirleats-05.jpg" width="200" height="200" />
 <br />
 <br />
-<input id="AddtoCart" type="button" value="Add to Cart" />
+<a asp-page="/Order/Cart" class="btn btn-dark btn-outline-light btn-lg">Place Order</a>
 
