Made the Crust, Size, and Sauce only able to click on one and not all of them

--- a/Pages/Order/Pizza.cshtml
+++ b/Pages/Order/Pizza.cshtml
@@ -3,21 +3,21 @@
 @{
 }
 <h2>Pizza Size</h2>
-<p><input id="Small" type="checkbox" />  Small</p>
-<p><input id="Medium" type="checkbox" />  Medium</p>
-<p><input id="Large" type="checkbox" />  Large</p>
+<p><input id="Small" name="size" type="radio" />  Small</p>
+<p><input id="Medium" name="size" type="radio" />  Medium</p>
+<p><input id="Large" name="size" type="radio" />  Large</p>
 <img src="https://thumbs.dreamstime.com/b/pizza-sizes-progression-vector-infographic-illustration-isometric-view-small-medium-large-pizza-sizes-progression-vector-211962863.jpg" alt="pizza size" width="200" height="200"/>
 
 <h2>Crust Size</h2>
-<p><input id="Thin" type="checkbox" />  Thin</p>
-<p><input id="Thick" type="checkbox" />  Thick</p>
+<p><input id="Thin" name="crust" type="radio" />  Thin</p>
+<p><input id="Thick" name="crust" type="radio" />  Thick</p>
 <img src="https://natashaskitchen.com/wp-content/uploads/2020/04/Pizza-Dough-Best-Pizza-Crust-Recipe-9-728x546.jpg" alt="Crust Thickness" width="200" height="200" />
 
 <h2>Sauce</h2>
-<p><input id="Barbeque" type="checkbox" />  Barbeque</p>
-<p><input id="Redsauce" type="checkbox" />  Marinara Sauce</p>
-<p><input id="Whitesauce" type="checkbox" />  Alfredo Sauce</p>
-<p><input id="Ranch" type="checkbox" />  Ranch</p>
+<p><input id="Barbeque" name="sauce" type="radio" />  Barbeque</p>
+<p><input id="Redsauce" name="sauce"  type="radio" />  Marinara Sauce</p>
+<p><input id="Whitesauce" name="sauce" type="radio" />  Alfredo Sauce</p>
+<p><input id="Ranch" name="sauce" type="radio" />  Ranch</p>
 <img src="http://portlandiapielady.com/wp-content/uploads/2020/05/REd-White-1-scaled.jpg" width="200" height="200" />
 
 <h2>Cheese</h2>
