Changed colors on the home page again.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,13 +4,13 @@
 }
 <style type="text/css">
 	body {
-		background: #800000 !important;
+		background: #C0C0C0 !important;
 	}
 </style>
 
 <div class="text-center">
 	<br />
-	<h1 class="text-light">@Model.PageTitle</h1>
+	<h1 class="text-dark">@Model.PageTitle</h1>
 
 	<br />
 	<p class="text-light">Start your pizza journey with MadisonPizzera today!</p>
