Changed FAQ because it was not linking to the button on the navbar.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -13,7 +13,7 @@
 	<h1 class="text-dark">@Model.PageTitle</h1>
 
 	<br />
-	<p class="text-light">Start your pizza journey with MadisonPizzera today!</p>
+	<p class="text-dark">Start your pizza journey with MadisonPizzera today!</p>
 	<br />
 
 	<a asp-page="/Order/Pizza" class="btn btn-dark btn-outline-light btn-lg">Start Order</a>
