--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Order/Cart">Cart</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/FQA">FQA</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/FAQ">FAQ</a>
                         </li>
                     </ul>
                 </div>
