Prices added and put the toppings all together. For now we will do a simple price of just small,medium, and large with whatever toppings the person pleases

--- a/Pages/Order/Pizza.cshtml
+++ b/Pages/Order/Pizza.cshtml
@@ -7,59 +7,50 @@
 
 <html>
 <body>
-	<form method="post">
-		<h2>Pizza Size</h2>
-		<p><input id="Small" name="size" type="radio" />  Small</p>
-		<p><input id="Medium" name="size" type="radio" />  Medium</p>
-		<p><input id="Large" name="size" type="radio" />  Large</p>
-		<img src="https://thumbs.dreamstime.com/b/pizza-sizes-progression-vector-infographic-illustration-isometric-view-small-medium-large-pizza-sizes-progression-vector-211962863.jpg" alt="pizza size" width="200" height="200"/>
+    <form method="post">
+        <h2>Pizza Size</h2>
+        <p><input id="Small" name="size" type="radio" />  Small		$12.50</p>
+        <p><input id="Medium" name="size" type="radio" />  Medium	$13.50</p>
+        <p><input id="Large" name="size" type="radio" />  Large		$14.50</p>
+        <img src="https://thumbs.dreamstime.com/b/pizza-sizes-progression-vector-infographic-illustration-isometric-view-small-medium-large-pizza-sizes-progression-vector-211962863.jpg" alt="pizza size" width="200" height="200" />
 
-		<h2>Crust Size</h2>
-		<p><input id="Thin" name="crust" type="radio" />  Thin</p>
-		<p><input id="Thick" name="crust" type="radio" />  Thick</p>
-		<img src="https://natashaskitchen.com/wp-content/uploads/2020/04/Pizza-Dough-Best-Pizza-Crust-Recipe-9-728x546.jpg" alt="Crust Thickness" width="200" height="200" />
+        <h2>Crust Size</h2>
+        <p><input id="Thin" name="crust" type="radio" />  Thin</p>
+        <p><input id="Thick" name="crust" type="radio" />  Thick</p>
+        <img src="https://natashaskitchen.com/wp-content/uploads/2020/04/Pizza-Dough-Best-Pizza-Crust-Recipe-9-728x546.jpg" alt="Crust Thickness" width="200" height="200" />
 
-		<h2>Sauce</h2>
-		<p><input id="Barbeque" name="sauce" type="radio" />  Barbeque</p>
-		<p><input id="Redsauce" name="sauce"  type="radio" />  Marinara Sauce</p>
-		<p><input id="Whitesauce" name="sauce" type="radio" />  Alfredo Sauce</p>
-		<p><input id="Ranch" name="sauce" type="radio" />  Ranch</p>
-		<img src="http://portlandiapielady.com/wp-content/uploads/2020/05/REd-White-1-scaled.jpg" width="200" height="200" />
+        <h2>Sauce</h2>
+        <p><input id="Barbeque" name="sauce" type="radio" />  Barbeque</p>
+        <p><input id="Redsauce" name="sauce" type="radio" />  Marinara Sauce</p>
+        <p><input id="Whitesauce" name="sauce" type="radio" />  Alfredo Sauce</p>
+        <p><input id="Ranch" name="sauce" type="radio" />  Ranch</p>
+        <img src="http://portlandiapielady.com/wp-content/uploads/2020/05/REd-White-1-scaled.jpg" width="200" height="200" />
 
-		<h2>Cheese</h2>
-		<p><input id="Mozzerella" type="checkbox" />  Mozzerela</p>
-		<p><input id="Cheddar" type="checkbox" />  Cheddar</p>
-		<img src="https://www.darkcheese.com/wp-content/uploads/2022/04/Brown-and-Green-Simple-Comparing-Product-Instagram-Post-e1649377769603.jpg" width="200" height="200" />
+        <h2>Cheese</h2>
+        <p><input id="Mozzerella" type="checkbox" />  Mozzerela</p>
+        <p><input id="Cheddar" type="checkbox" />  Cheddar</p>
+        <img src="https://www.darkcheese.com/wp-content/uploads/2022/04/Brown-and-Green-Simple-Comparing-Product-Instagram-Post-e1649377769603.jpg" width="200" height="200" />
 
-		<h2>Meats</h2>
-		<p><input id="Pepperoni" type="checkbox" />  Pepperoni</p>
-		<p><input id="Sausage" type="checkbox" />  Sausage</p>
-		<p><input id="CanadianBacon" type="checkbox" />  Canadian Bacon</p>
-		<p><input id="Bacon" type="checkbox" />  Bacon</p>
-		<p><input id="Chicken" type="checkbox" />  Chicken</p>
-		<p><input id="Pork" type="checkbox" />  Pork</p>
-		<p><input id="Ham" type="checkbox" />  Ham</p>
-		<img src="https://www.tysonfoodservice.com/sites/default/files/2019-03/Pizza_Toppings_Landing_Page_Header_Image_1200x320.jpg" width="200" height="200" />
+        <h2>Toppings</h2>
+        <p><input id="Pepperoni" type="checkbox" />  Pepperoni</p>				<p><input id="Pineapple" type="checkbox" />  Pineapple</p>
+        <p><input id="Sausage" type="checkbox" />  Sausage</p>					<p><input id="Spinach" type="checkbox" />  Spinach</p>
+        <p><input id="CanadianBacon" type="checkbox" />  Canadian Bacon</p>		<p><input id="Onions" type="checkbox" />  Onions</p>
+        <p><input id="Bacon" type="checkbox" />  Bacon</p>                      <p><input id="Peppers" type="checkbox" />  Green Peppers</p>
+        <p><input id="Chicken" type="checkbox" />  Chicken</p>                  <p><input id="BlackOlives" type="checkbox" />  Black Olives</p>
+        <p><input id="Pork" type="checkbox" />  Pork</p>                        <p><input id="Jalopenos" type="checkbox" />  Jalopenos</p>
+        <p><input id="Ham" type="checkbox" />  Ham</p>                          <p><input id="Mushrooms" type="checkbox" />  Mushrooms</p>
 
-		<h2>Toppings</h2>
-		<p><input id="Pineapple" type="checkbox" />  Pineapple</p>
-		<p><input id="Spinach" type="checkbox" />  Spinach</p>
-		<p><input id="Onions" type="checkbox" />  Onions</p>
-		<p><input id="Peppers" type="checkbox" />  Green Peppers</p>
-		<p><input id="BlackOlives" type="checkbox" />  Black Olives</p>
-		<p><input id="Jalopenos" type="checkbox" />  Jalopenos</p>
-		<p><input id="Mushrooms" type="checkbox" />  Mushrooms</p>
-		<img src="https://iowagirleats.com/wp-content/uploads/2017/05/Freschetta-Gluten-Free-Pizza-iowagirleats-05.jpg" width="200" height="200" />
-		<br />
-		<br />
-		<!--
-			After putting this into a form I was able to get the button to work with the pizza page with C#. 
-			The Model.Ingredients prints out at the bottom next to the button after it is pushed. The output has values for the first two items being clicked on.
-			Please let me know if you have questions and I can try and help.
-		-->
-		<input type="submit" value="Add to Cart" class="btn btn-dark btn-outline-light btn-lg" asp-page-handler="Submit">
-		@Model.Ingredients
-	</form>
+    
+        <br />
+        <br />
+        <!--
+        After putting this into a form I was able to get the button to work with the pizza page with C#.
+        The Model.Ingredients prints out at the bottom next to the button after it is pushed. The output has values for the first two items being clicked on.
+        Please let me know if you have questions and I can try and help.
+    -->
+        <input type="submit" value="Add to Cart" class="btn btn-dark btn-outline-light btn-lg" asp-page-handler="Submit">
+        @Model.Ingredients
+    </form>
 
 	<!--asp-page="/Order/Cart"-->
 </body>
